--- a/light_mode.css
+++ b/light_mode.css
@@ -70,7 +70,13 @@ h1, h2 {
     width: 100%;
     margin: 30px 0;
 }
+thead tr th {
+  border: 1px solid #d9d9d9 !important;
+}
 
+tbody tr td {
+  border: 1px solid #d9d9d9 !important;
+}
 .table thead th {
     background-color: #f8f9fa;
     border-bottom: 3px solid #dee2e6;
